updaterrr ~ b14 ~ safari fixes and nice readability per lychee9090

--- a/apollostage/b14/_base.scss
+++ b/apollostage/b14/_base.scss
@@ -1437,19 +1437,22 @@ ul.collage_images li a > span {
     display: none;
 }
 
-/* for rows 'Albums', 'Compilations', 'Live Albums', etc. */
+/* Discog table: for rows 'Albums', 'Compilations', 'Live Albums', etc. */
 #discog_table tr[id^=torrents_] {
 background-color: $userinfo-background-color-1;
   :not(a.tooltip.brackets){font-size:125%; color:$primary-accent-color }
-
 }
 
-/* for names of albums, to help them stand out somewhat */
+/* Discog table: for names of albums, to help them stand out somewhat */
 #discog_table .discog strong a,
 #discog_table td.td_info.big_info div.group_info.clear strong a {
 font-size:115%;
 color: $primary-accent-color
 }
+
+/* Discog table:  for encodings, to get breathing room after the >> character */
+div#discog_table td.td_info:not(span.torrent_links_block) > a 
+{padding-inline-start: 1em;}
 
 
 #footer {
