--- a/apollostage/b14/style.css
+++ b/apollostage/b14/style.css
@@ -1357,7 +1357,7 @@ ul.collage_images li a > span {
   display: none;
 }
 
-/* for rows 'Albums', 'Compilations', 'Live Albums', etc. */
+/* Discog table: for rows 'Albums', 'Compilations', 'Live Albums', etc. */
 #discog_table tr[id^=torrents_] {
   background-color: #0a3a2e;
 }
@@ -1366,11 +1366,16 @@ ul.collage_images li a > span {
   color: #83e4a6;
 }
 
-/* for names of albums, to help them stand out somewhat */
+/* Discog table: for names of albums, to help them stand out somewhat */
 #discog_table .discog strong a,
 #discog_table td.td_info.big_info div.group_info.clear strong a {
   font-size: 115%;
   color: #83e4a6;
+}
+
+/* Discog table:  for encodings, to get breathing room after the >> character */
+div#discog_table td.td_info:not(span.torrent_links_block) > a {
+  padding-inline-start: 1em;
 }
 
 #footer {
